src/entrypoints/popup/style.css
:root {
	--unit: 0.0769rem;
	--unit-2: 0.1538rem;
	--unit-4: 0.3076rem;
	--unit-6: 0.4614rem;
	--unit-8: 0.6152rem;
	--unit-12: 0.9228rem;
	--unit-16: 1.2304rem;
	--unit-20: 1.5385rem;
	--unit-32: 2.4608rem;

	--radius: var(--unit-8);

	--app-0: color-mix(in srgb, #000 5%, var(--app));
	--app-1: color-mix(in srgb, #000 10%, var(--app));
	--app-2: color-mix(in srgb, #000 15%, var(--app));
	--app-3: color-mix(in srgb, #000 20%, var(--app));
	--app-4: color-mix(in srgb, #000 25%, var(--app));
	--app-5: color-mix(in srgb, #000 30%, var(--app));

	--control: var(--app-0);
	--control-hover: var(--app-1);
	--control-active: var(--app-3);
	--control-selected: var(--app-2);
	--control-selected-hover: var(--app-4);

	--text-primary: hsl(0 0% 0%);
	--text-secondary: hsl(0 0% 20%);

	--accent: oklch(55% 0.24 260);
	--accent-hover: oklch(50% 0.24 260);
	--accent-active: oklch(70% 0.24 260);

	--shadow-small: 0 0 var(--unit-2) rgba(0, 0, 0, 0.15);
	--shadow-large: 0 var(--unit-2) var(--unit-4) rgba(0, 0, 0, 0.1);

	@media (prefers-color-scheme: dark) {
		--app-0: color-mix(in srgb, #fff 10%, var(--app));
		--app-1: color-mix(in srgb, #fff 15%, var(--app));
		--app-2: color-mix(in srgb, #fff 20%, var(--app));
		--app-3: color-mix(in srgb, #fff 25%, var(--app));
		--app-4: color-mix(in srgb, #fff 30%, var(--app));
		--app-5: color-mix(in srgb, #fff 35%, var(--app));

		--text-primary: hsl(0, 0%, 100%);
		--text-secondary: hsl(0, 0%, 80%);

		--accent: oklch(76% 0.14 205);
		--accent-hover: oklch(86% 0.14 205);
		--accent-active: oklch(90% 0.14 205);
	}
}

html {
	cursor: default;
	margin: 0;
	padding: 0;
	color: var(--text-primary);
	color-scheme: light dark;
	font: menu;
	line-height: 1.5;
	font-family:
		system-uibody,
		-apple-system,
		"SF Pro Text",
		"SF Pro Icons",
		"Helvetica Neue",
		"Helvetica",
		"Arial",
		sans-serif;
	user-select: none;
	-webkit-font-smoothing: antialiased;
	background-color: var(--app);
	width: auto;
	font-weight: 450;
}

body {
	margin: 0;
	padding: 0;
	width: auto;
	height: auto;
}

#root {
	display: flex;
	flex-direction: column;
	align-items: stretch;
	gap: var(--unit-8);
	transition: background-color 0.1s;
	background-color: var(--app);
	padding: var(--unit-12);
	width: min-content;
	height: min-content;
}

*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

section {
	overflow-wrap: break-word;
}

input,
textarea,
select {
	overflow: hidden;
	font: inherit;
	text-overflow: ellipsis;
	white-space: nowrap;
}

button {
	all: unset;
	display: flex;
	justify-content: center;
	align-items: center;
	box-sizing: border-box;
	border-radius: var(--unit-8);
	background-color: var(--control);
	width: 100%;
	color: var(--text-primary);
	text-align: start;

	&:hover {
		background-color: var(--control-hover);
	}

	&:active {
		background-color: var(--control-active);
	}
}

h1,
h2,
h3,
h4,
h5,
h6 {
	display: flex;
	flex-direction: row;
	justify-content: center;
	gap: var(--unit-4);
	font: inherit;
	font-size: inherit;
	text-wrap: balance;
	overflow-wrap: break-word;
}

h1,
h2 {
	font-weight: 700;
	font-size: 120%;
}

h3 {
	font-weight: 700;
}

h4,
h5,
h6 {
	color: var(--text-secondary);
	font-size: 80%;
}

p {
	color: var(--text-secondary);
	font: inherit;
	text-wrap: pretty;
	overflow-wrap: break-word;
}

hr {
	align-self: center;
	margin: 0;
	border-width: 0;
	background-color: var(--app-1);
	width: 25%;
	height: var(--unit);
}

select {
	display: flex;
	vertical-align: middle;
	outline: solid var(--unit) var(--control);
	outline-offset: calc(-1 * var(--unit));
	border: none;
	background-color: transparent;
	padding-inline: var(--unit-8) 0;
	color: var(--text-primary);

	&:hover {
		outline-color: var(--control-hover);
	}

	&:active {
		outline-color: var(--control-active);
	}
}

.hidden {
	display: none !important;
}

.disabled {
	opacity: 0.5 !important;
	pointer-events: none !important;

	* {
		pointer-events: none !important;
	}
}

